# DCPM_Optik

./: .gitignore  README.md  requirements.txt
.tasks/: tasks.db
360_homography_webui/: README.md  app.py  core_math.py  requirements.txt
Archived/SegmentationPipeline/: pyproject.toml
Archived/SegmentationPipeline/.kiro/specs/road-defect-segmentation-pipeline/: design.md  requirements.md  tasks.md
Archived/SegmentationPipeline/.kiro/specs/web-segmentation-ui/: design.md  tasks.md
Archived/SegmentationPipeline/src/pipeline/: __init__.py  __main__.py  config_manager.py  logger.py  preprocessor.py  sam2_segmenter.py  verifier.py  yolo_detector.py
Archived/SegmentationPipeline/tests/unit/: test_config_manager.py  test_frame_ingester.py  test_output_writer.py  test_sam2_segmenter.py  test_verifier.py  test_yolo_detector.py
Archived/SegmentationPipeline/web/: README.md
Archived/SegmentationPipeline/web/static/: style.css
Area_Calculation/: batch_red_boundary_area.py  image_scales.csv
GPMF_Extraction/: extract_gpmf.py
Homography/: main.py
Image_Processing/: ExtractEXIF.py  TOI_exif.py
NEW_homography_360/: app.py  core_math.py  extract_gpmf.py  requirements.txt
SAM3_colab_api/: README.md  colab-setup-instructions.md  colab-training-server.md  sam3-yolo-segemnetation-improver.md  test_image_segmentation.py  test_video_segmentation.py
SAM3_local/: .env  .env.example  README.md  app.py  config.json
SegmentationPipeline/: .gitignore  README.md  run_and_visualize.py
Segmentation_Pipeline/: README.md  app.py  install.sh  requirements.txt
src/: main.py  (+1 more)
(+254 files in other folders)
